stop using css file for z-index

--- a/inst/emptystate.css
+++ b/inst/emptystate.css
@@ -5,10 +5,6 @@
   height: 100%;
 }
 
-.empty-state-container {
-  z-index: 9999;
-}
-
 .empty-state-content .empty-state-component {
   display: flex;
   flex-direction: column;
